{
    "name": "OSLInput",
    "maps": [
        {
            "name": "Patcher",
            "id": "fa0e3d9e-1417-446a-b28e-db7409fca285",
            "actions": [
                {
                    "name": "PrimaryLeft",
                    "type": "Button",
                    "id": "e6c9ecaf-b2ef-493b-b7eb-3305dc359157",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryRight",
                    "type": "Button",
                    "id": "b1dd8378-1cf0-4c93-a1ed-4a65ecfe40e9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryLeft",
                    "type": "Button",
                    "id": "cfe2a8e1-0def-4b73-9835-7999d7775914",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryRight",
                    "type": "Button",
                    "id": "0284a21b-ad71-4fdf-ab6c-d2cf9970840a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GripLeft",
                    "type": "Button",
                    "id": "8c80dbb2-e4df-4247-a62f-a9443cb1a57a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GripRight",
                    "type": "Button",
                    "id": "95bc30e0-54ac-4b4e-97e9-af5ac3958eef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerLeft",
                    "type": "Button",
                    "id": "0b5b3bc8-f9ea-460f-8591-9c0e32cce049",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerRight",
                    "type": "Button",
                    "id": "59544473-b7c3-4794-a054-d2f00baf676c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "be1bdf47-24c3-4128-be97-61de38913547",
                    "path": "<XRController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3452e574-b40a-4b90-acf7-27cf147755c9",
                    "path": "<XRController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c0698d6-a459-49d2-809d-51d63aaa94ce",
                    "path": "<XRController>{LeftHand}/gripButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d135410e-b60a-4c99-bf76-1522864a3612",
                    "path": "<XRController>{LeftHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80ca9fb8-b10b-4b0b-8563-ebb23963f059",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5754cf6e-9933-4238-9d51-1aab7c3ea138",
                    "path": "<XRController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f96c9781-0c26-43d0-9bef-b7c8934d0615",
                    "path": "<XRController>{RightHand}/gripButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb73339d-971e-4352-b16a-64660a902881",
                    "path": "<XRController>{RightHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}